media/css/firefox/nightly_firstrun.less
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

@import '../sandstone/lib.less';

html {
    background: #0c2745;
}

h1,
h2,
h3,
h4,
#colophon {
    color: white;
}

.sky #outer-wrapper {
    background: url(/media/img/firefox/firstrun/grain.png) repeat-x,
                url(/media/img/firefox/firstrun/background-nightly.jpg) no-repeat top center,
                linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%,rgba(0, 0, 0, 1) 580px),
                #003357;
}

#firstrun-header {
    margin: 0;
    padding-top: 240px;
    background: url(/media/img/firefox/firstrun/logo-nightly.png) no-repeat 50% 30px;
    text-align: center;
}

main {
    margin: 0 30px;
    a,
    a:link,
    a:visited {
        color: #00539F;
    }
    a:hover,
    a:active,
    a:focus {
        color: #0095DD;
    }

    h1 {
        .open-sans();
        .font-size(48px);
        text-shadow: 0 2px 0 rgba(0, 0, 0, .15);
    }
    h2 {
        .open-sans();
        .font-size(20px);
        letter-spacing: 0;
        color: #79d8ff;
        text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
    }

    #nightly-box {
        margin-top: 45px;
        text-align: center;
        .blue-box {
            display: inline-block;
            vertical-align: top;
            height: 100%;
            width: 238px;
            padding: 19px 30px 30px 30px;
            margin-right: 15px;
            &:last-child {
                margin-right: 0;
            }
            &.localize .title {
                background: url(/media/img/firefox/firstrun/localize.png) no-repeat top center;
            }
            &.code .title {
                background: url(/media/img/firefox/firstrun/code.png) no-repeat top center;
            }
            &.test .title {
                background: url(/media/img/firefox/firstrun/test.png) no-repeat top center;
            }
            .title {
                padding-top: 85px;
            }
            h4 {
                .font-size(29px);
                text-transform: uppercase;
            }
        }
        .content {
            border-top: 1px dotted #24375b;
            margin-top: 10px;
            padding-top: 30px;
        }
        a.button {
            color: white;
            .font-size(@largeFontSize);
            font-weight: normal;
            text-transform: uppercase;
            width: 100%;
            padding: 15px 0;
            border-radius: 7px;
        }
    }

    .blue-box {
        background: rgba(133, 156, 238, .15);
        box-shadow: inset 0 0 8px 0 #11253e;
        border: 1px solid #1b335b;
        margin-bottom: 20px;
        padding: 30px;
        &.badge {
            padding: 0 30px 0 150px;
            background: url(/media/img/firefox/firstrun/nightly-badge.png) no-repeat 60px 50%, rgba(133, 156, 238, .15);
            h3 {
                display: inline-block;
                margin: 20px 0 5px 0;
            }
        }
        h3 {
            .font-size(20px);
            line-height: 1.4em;
        }
    }

    #nightly-box .description,
    .blue-box.badge a,
    .blue-box.l10n a {
        .font-size(@largeFontSize);
        color: #79d8ff;
        text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
    }
    .blue-box.l10n {
        .font-size(@largeFontSize);
        color: white;
        text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
        h4 {
            .font-size(20px);
        }
        h5,
        h6 {
            color: white;
        }
    }
    #nightly-box .blue-box a.button,
    .blue-box.badge a {
        .trailing-arrow();
    }
}

#colophon {
    padding-top: 120px;
    background: black;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(13, 40, 70, 1) 100%);
}

html[dir="rtl"] {
    #nightly-box .blue-box {
        margin-right: 0;
        margin-left: 15px;
        &:last-child {
            margin-left: 0;
        }
    }
    .blue-box.badge {
        padding: 0 150px 0 30px;
        background: url(/media/img/firefox/firstrun/nightly-badge.png) no-repeat right 60px bottom 50%, rgba(133, 156, 238, .15);
    }
}


/* Tablet Layout: 760px */
@media only screen and (max-width: @breakDesktop) {
    main {
        .wide-br {
            display: none;
        }
        h1 {
            .font-size(37px);
        }
        #nightly-box .blue-box {
            margin-right: 0;
            margin-left: 0;
            width: auto;
            display: block;
        }
        .blue-box.badge {
            padding: 0 30px 0 120px;
            background-position: left 30px bottom 50%;
        }
    }
    html[dir="rtl"] {
        #nightly-box .blue-box {
            margin-right: 0;
            margin-left: 0;
        }
        .blue-box.badge {
            padding: 0 120px 0 30px;
            background-position: right 30px bottom 50%;
        }
    }
}

/* Mobile Layout: 320px */
@media only screen and (max-width: @breakTablet) {
    #firstrun-header {
        background-position: top center;
        padding: 180px 0 0;
    }
    html[dir="rtl"] main .blue-box.badge,
    main .blue-box.badge {
        padding: 90px 30px 0 30px;
        background-position: right 50% top 15px;
    }
}

